Update duplicated notebook params
Updating notebook parameters via strict copy-and-paste of matching notebooks in the private repo containing the ART code (changes covered in [237](https://github.com/JBEI/AutomatedRecommendationTool/pull/237/) and [249](https://github.com/JBEI/AutomatedRecommendationTool/pull/249/) ).

1.  Update `max_mcmc_cores` to avoid processor oversubscription.
    Clients may use older hardware or may be using most of their system resources. Maximize the chance the examples will work out-of-the-box.

    Note this doesn't yet include some notebooks that didn't set max_mcmc_cores, but ART should auto-detect and use the available cores in those cases. It would be slightly better for consistency to also hard-core 2 cores there, but suggest we keep this PR as simple as possible until we have some experience in reviewing notebooks.

2.  Replace deprecated parameters / data members
    Replacing `output_directory` parameter and `outDir` data member (both now renamed to `output_dir`).  Replace `bounds_file` with `bounds` (a DataFrame)

--- a/notebooks/ART_tutorial.ipynb
+++ b/notebooks/ART_tutorial.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# ART tutorial: improving production for an easy-to-learn function  "
+    "# ART tutorial: improving production for an easy-to-learn function"
    ]
   },
   {
@@ -36,8 +36,8 @@
     "\n",
     "If it is not, clone the corresponding git repository (or pull the latest version) to install it:\n",
     "\n",
-    "`git clone https://github.com/JBEI/AutomatedRecommendationTool.git`  \n",
-    " \n",
+    "`git clone https://github.com/JBEI/AutomatedRecommendationTool.git`\n",
+    "\n",
     "Information about licensing ART is available at https://github.com/JBEI/ART.\n",
     "\n"
    ]
@@ -66,7 +66,8 @@
    "source": [
     "import os\n",
     "import sys\n",
-    "sys.path.append('.')  # Add local directory to access some of the functions\n",
+    "sys.path.append('.')   # Add local directory to access some of the functions\n",
+    "sys.path.append('../') # Make sure this is the location for the ART library\n",
     "\n",
     "import pandas as pd\n",
     "import numpy as np\n",
@@ -144,7 +145,7 @@
    "source": [
     "For this tutorial, and for the sake of the example, our **input** will be composed of the concentrations for two proteins in the [mevalonate pathway](https://www.sciencedirect.com/science/article/pii/S109671761400161X?casa_token=CgEdQ91wK-sAAAAA:xWMpxuffL5Ukj7tyacW08VmwdR5jz1u8IjeXxJWb_FNMfn17yN_4XrVKgN2_Xql4Swjg8tIFf9bH) (e.g. atoB and HMGS) and the **response** will be isoprenol production. We will try to increase isoprenol production.\n",
     "\n",
-    "However, everything we do below will be usable for other pathway, final metabolite, number of proteins, transcripts or promoter combinations. This is a general procedure. "
+    "However, everything we do below will be usable for other pathway, final metabolite, number of proteins, transcripts or promoter combinations. This is a general procedure."
    ]
   },
   {
@@ -193,7 +194,7 @@
    "source": [
     "This is a function that links the response $r$ (isoprenol production) to the concentration of proteins $p_1$ (atoB) and $p_2$ (HMGS) as follows:\n",
     "\n",
-    "$r = 25 - \\left(\\frac{1}{2}\\left((p_1-8)^2+(p_2-8)^2\\right) + e^{-\\left((p_1-3)^2+(p_2-3)^2\\right)}\\right)$ \n",
+    "$r = 25 - \\left(\\frac{1}{2}\\left((p_1-8)^2+(p_2-8)^2\\right) + e^{-\\left((p_1-3)^2+(p_2-3)^2\\right)}\\right)$\n",
     "\n",
     "and looks like this:"
    ]
@@ -215,7 +216,7 @@
     }
    ],
    "source": [
-    "auxiliary_functions.plot_function(true_function_easy, [lb,ub], dimension) "
+    "auxiliary_functions.plot_function(true_function_easy, [lb,ub], dimension)"
    ]
   },
   {
@@ -245,7 +246,7 @@
    "source": [
     "It is useful to collect in a single dictionary all the parameters that we will use as inputs for ART to learn the function we defined above.\n",
     "\n",
-    "For example, the first parameter is the dimensionality of the input (in our case, we have two proteins, $p_1$ and $p_2$, so the dimensionality is 2: "
+    "For example, the first parameter is the dimensionality of the input (in our case, we have two proteins, $p_1$ and $p_2$, so the dimensionality is 2:"
    ]
   },
   {
@@ -336,7 +337,7 @@
    "outputs": [],
    "source": [
     "user_params['objective'] = 'maximize'\n",
-    "user_params['threshold'] = 0.2        "
+    "user_params['threshold'] = 0.2"
    ]
   },
   {
@@ -352,10 +353,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "user_params['output_directory'] = '../results/tutorial'\n",
-    "os.makedirs(user_params['output_directory'], exist_ok=True)\n",
+    "user_params['output_dir'] = '../results/tutorial'\n",
+    "os.makedirs(user_params['output_dir'], exist_ok=True)\n",
     "\n",
-    "user_params['seed'] = 30     "
+    "user_params['seed'] = 30"
    ]
   },
   {
@@ -459,24 +460,24 @@
     }
    ],
    "source": [
-    "dim = user_params['dim'] \n",
-    "bounds_file = f\"{user_params['output_directory']}/sim_data_bounds_FE.csv\"\n",
+    "dim = user_params['dim']\n",
     "\n",
-    "df = pd.DataFrame(columns=['Variable', 'Min', 'Max'])\n",
-    "df['Variable'] = ['p_' + str(i) for i in range(1, dim + 1)]\n",
-    "df['Min'] = lb*np.ones(dim)\n",
-    "df['Max'] = ub*np.ones(dim)\n",
-    "df = df.set_index('Variable')\n",
+    "bounds = pd.DataFrame(columns=['Variable', 'Min', 'Max'])\n",
+    "bounds['Variable'] = ['p_' + str(i) for i in range(1, dim + 1)]\n",
+    "bounds['Min'] = lb*np.ones(dim)\n",
+    "bounds['Max'] = ub*np.ones(dim)\n",
+    "bounds = bounds.set_index('Variable')\n",
     "\n",
-    "display(df)\n",
-    "df.to_csv(path_or_buf=bounds_file)\n"
+    "display(bounds)\n",
+    "bounds_file = f\"{user_params['output_dir']}/sim_data_bounds_FE.csv\"\n",
+    "bounds.to_csv(path_or_buf=bounds_file)\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## DBTL cycles "
+    "## DBTL cycles"
    ]
   },
   {
@@ -544,12 +545,12 @@
    "outputs": [],
    "source": [
     "art_params = {\n",
-    "    'bounds_file': bounds_file,\n",
+    "    'bounds': utils.read_table(bounds_file),\n",
     "    'input_vars': input_var,\n",
-    "    'num_recommendations': user_params['n_instances_cycle1'],    \n",
+    "    'num_recommendations': user_params['n_instances_cycle1'],\n",
     "    'initial_cycle': True,                                    # Set this to True for initial designs recommendations\n",
-    "    'seed': user_params['seed'],                              \n",
-    "    'output_dir': user_params['output_directory']  \n",
+    "    'seed': user_params['seed'],\n",
+    "    'output_dir': user_params['output_dir']\n",
     "}"
    ]
   },
@@ -679,7 +680,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "x = [a for a in art.recommendations['p_1']]   \n",
+    "x = [a for a in art.recommendations['p_1']]\n",
     "y = [a for a in art.recommendations['p_2']]"
    ]
   },
@@ -707,7 +708,7 @@
     }
    ],
    "source": [
-    "auxiliary_functions.plot_function(true_function_easy, [lb,ub], dimension, points=[x,y]) "
+    "auxiliary_functions.plot_function(true_function_easy, [lb,ub], dimension, points=[x,y])"
    ]
   },
   {
@@ -732,7 +733,7 @@
    "source": [
     "P = art.recommendations.values\n",
     "r = true_function_easy(P.T, dim).reshape(-1, 1)\n",
-    "training_data_file = f'{art.output_dir}/sim_data_FE_cycle{str(cycle + 1)}.csv'     \n",
+    "training_data_file = f'{art.output_dir}/sim_data_FE_cycle{str(cycle + 1)}.csv'\n",
     "utils.save_edd_csv(P, r, art.input_vars, training_data_file, response_vars=response_var[0])"
    ]
   },
@@ -794,16 +795,16 @@
    "outputs": [],
    "source": [
     "art_params = {\n",
-    "    'bounds_file': bounds_file,\n",
-    "    'input_vars': input_var,              \n",
+    "    'bounds': utils.read_table(bounds_file),\n",
+    "    'input_vars': input_var,\n",
     "    'response_vars': response_var,\n",
     "    'objective': user_params['objective'],\n",
     "    'threshold': user_params['threshold'],\n",
     "    'alpha': user_params['alpha_cycle2'],\n",
-    "    'num_recommendations': user_params['num_recommendations'], \n",
+    "    'num_recommendations': user_params['num_recommendations'],\n",
     "    'max_mcmc_cores': 2,\n",
-    "    'seed': user_params['seed'],                           \n",
-    "    'output_dir': user_params['output_directory'],\n",
+    "    'seed': user_params['seed'],\n",
+    "    'output_dir': user_params['output_dir'],\n",
     "}"
    ]
   },
@@ -928,7 +929,7 @@
     "%%time\n",
     "if run_art:\n",
     "    art = RecommendationEngine(df, **art_params)\n",
-    "    os.rename(default_artpkl_name, new_artpkl_name) \n",
+    "    os.rename(default_artpkl_name, new_artpkl_name)\n",
     "else:\n",
     "    with open(new_artpkl_name, 'rb') as output:\n",
     "        art = pickle.load(output)"
@@ -938,11 +939,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The first graph involves a comparison between observed data and predictions. In this case, the predictions are good ($R^2 = 0.88$), despite ART not having too many instances to learn from. \n",
+    "The first graph involves a comparison between observed data and predictions. In this case, the predictions are good ($R^2 = 0.88$), despite ART not having too many instances to learn from.\n",
     "\n",
     "The second graph involves the probability distribution for the response (isoprenol production in this case) for each of the recommendations (5 in this case, as specified above under `num_recommendations`) provided by ART. The continous vertical line is the mean for each distribution, and the discontinous line is the best production level in the training data set.\n",
     "\n",
-    "The third graph indicates the probability of achieving success as a function of strains tested. In this case, testing the 5 recommendations provided has \\~70\\% of achieving success "
+    "The third graph indicates the probability of achieving success as a function of strains tested. In this case, testing the 5 recommendations provided has \\~70\\% of achieving success"
    ]
   },
   {
@@ -1321,7 +1322,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In this third cycle (second with simulated experimental results), the predictions are perfect $(R^2=1.0)$, indicating that ART has learnt to predict the response for all training inputs. \n",
+    "In this third cycle (second with simulated experimental results), the predictions are perfect $(R^2=1.0)$, indicating that ART has learnt to predict the response for all training inputs.\n",
     "The new recommendations cannot really improve since the previous cycle recommendations already reached the maximum:"
    ]
   },
@@ -1351,7 +1352,7 @@
    "source": [
     "And the probability that at least one strain exhibits production 20% over the maximum is zero since ART has now accuretaly learnt the production distribution, and the maximum is already around 25.\n",
     "\n",
-    "Hence the success probablity graph is at zero.  \n"
+    "Hence the success probablity graph is at zero.\n"
    ]
   },
   {
@@ -1416,12 +1417,12 @@
    "outputs": [],
    "source": [
     "art_params_A = {\n",
-    "    'bounds_file': bounds_file,\n",
+    "    'bounds': utils.read_table(bounds_file),\n",
     "    'input_vars': input_var,\n",
-    "    'num_recommendations': user_params_A['n_instances_cycle1'],    \n",
+    "    'num_recommendations': user_params_A['n_instances_cycle1'],\n",
     "    'initial_cycle': True,                                    # Set this to True for initial designs recommendations\n",
-    "    'seed': user_params_A['seed'],                              \n",
-    "    'output_dir': user_params_A['output_directory']  \n",
+    "    'seed': user_params_A['seed'],\n",
+    "    'output_dir': user_params_A['output_dir']\n",
     "}"
    ]
   },
@@ -1432,12 +1433,12 @@
    "outputs": [],
    "source": [
     "art_params_B = {\n",
-    "    'bounds_file': bounds_file,\n",
+    "    'bounds': utils.read_table(bounds_file),\n",
     "    'input_vars': input_var,\n",
-    "    'num_recommendations': user_params_B['n_instances_cycle1'],    \n",
+    "    'num_recommendations': user_params_B['n_instances_cycle1'],\n",
     "    'initial_cycle': True,                                    # Set this to True for initial designs recommendations\n",
-    "    'seed': user_params_B['seed'],                              \n",
-    "    'output_dir': user_params_B['output_directory']  \n",
+    "    'seed': user_params_B['seed'],\n",
+    "    'output_dir': user_params_B['output_dir']\n",
     "}"
    ]
   },
@@ -1448,12 +1449,12 @@
    "outputs": [],
    "source": [
     "art_params_C = {\n",
-    "    'bounds_file': bounds_file,\n",
+    "    'bounds': utils.read_table(bounds_file),\n",
     "    'input_vars': input_var,\n",
-    "    'num_recommendations': user_params_C['n_instances_cycle1'],    \n",
+    "    'num_recommendations': user_params_C['n_instances_cycle1'],\n",
     "    'initial_cycle': True,                                    # Set this to True for initial designs recommendations\n",
-    "    'seed': user_params_C['seed'],                              \n",
-    "    'output_dir': user_params_C['output_directory']  \n",
+    "    'seed': user_params_C['seed'],\n",
+    "    'output_dir': user_params_C['output_dir']\n",
     "}"
    ]
   },
@@ -1562,16 +1563,16 @@
    "outputs": [],
    "source": [
     "art_params = {\n",
-    "    'bounds_file': bounds_file,\n",
-    "    'input_vars': input_var,               \n",
+    "    'bounds': utils.read_table(bounds_file),\n",
+    "    'input_vars': input_var,\n",
     "    'response_vars': response_var,\n",
     "    'objective': user_params['objective'],\n",
     "    'threshold': user_params['threshold'],\n",
     "    'alpha': user_params['alpha_cycle2'],\n",
     "    'num_recommendations': user_params['num_recommendations'],\n",
     "    'max_mcmc_cores': 2,\n",
-    "    'seed': user_params['seed'],                           \n",
-    "    'output_dir': user_params['output_directory']  \n",
+    "    'seed': user_params['seed'],\n",
+    "    'output_dir': user_params['output_dir']\n",
     "}"
    ]
   },
@@ -1827,7 +1828,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "As you can see the difference is significant: the larger the number of initial training instances the better the predictions. "
+    "As you can see the difference is significant: the larger the number of initial training instances the better the predictions."
    ]
   },
   {
