--- a/notebooks/Isoprenol_generate_initial_designs.ipynb
+++ b/notebooks/Isoprenol_generate_initial_designs.ipynb
@@ -85,6 +85,7 @@
    "source": [
     "import sys\n",
     "sys.path.append('./')\n",
+    "sys.path.append('../') # Make sure this is the location for the ART library \n",
     "\n",
     "import numpy as np\n",
     "    \n",
