Update unique notebook params
Updating ART parameter use in notebooks unique to this repo (so changes can't be copied from the private ART repo).

1.  Update `max_mcmc_cores` to avoid processor oversubscription.
    Clients may use older hardware or may be using most of their system resources. Maximize the chance the examples will work out-of-the-box.

    Note this doesn't yet include some notebooks that didn't set `max_mcmc_cores`, but ART should auto-detect and use the available cores in those cases. It would be slightly better for consistency to also hard-core 2 cores there, but suggest we keep this PR as simple as possible until we have some experience in reviewing notebooks.

2.  Replace deprecated parameters / data members

    Replacing `output_directory` parameter and `outDir` data member (both now renamed to `output_dir`),  Also replacing `bounds_file`, with newer `bounds`.

    Ruling out omissions:
    ```bash
    $ cd notebooks/
    $ grep -i outdir *
    $ grep -i output_directory *
    $ grep -i max_mcmc_cores *
    [multi-line output omitted for this command]
    $ grep -i bounds_file *.ipynb
   [multi-line output omitted for this command]
```

--- a/notebooks/Simulated_Data_MediumFunction_Tutorial.ipynb
+++ b/notebooks/Simulated_Data_MediumFunction_Tutorial.ipynb
@@ -46,7 +46,10 @@
    "source": [
     "import sys\n",
     "sys.path.append('../../AutomatedRecommendationTool')        # Make sure this is the location for the ART library \n",
-    "    \n",
+    "    \n\n",
+    "# Hide distracting warnings from 3rd party code\n",
+    "from warning_utils import filter_end_user_warnings\n",
+    "filter_end_user_warnings()\n\n",
     "from art.core import *     \n",
     "import matplotlib.pyplot as plt\n",
     "from mpl_toolkits.mplot3d import Axes3D\n"
@@ -188,7 +191,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "user_params['output_directory'] = '../results/'\n",
+    "user_params['output_dir'] = '../results/'\n",
     "user_params['seed'] = 42"
    ]
   },
@@ -315,13 +318,13 @@
    "source": [
     "bounds_file = '../data/sim_data_bounds_FM.csv'\n",
     "\n",
-    "df = pd.DataFrame(columns=['Variable', 'Min', 'Max', 'Scaling'])\n",
-    "df['Variable'] = ['x_' + str(i) for i in range(1, dim + 1)]\n",
-    "df['Min'] = lb*np.ones(dim)\n",
-    "df['Max'] = ub*np.ones(dim)\n",
-    "df['Scaling'] = np.ones(dim)\n",
-    "df = df.set_index('Variable')\n",
-    "df.to_csv(path_or_buf=bounds_file)\n"
+    "bounds = pd.DataFrame(columns=['Variable', 'Min', 'Max', 'Scaling'])\n",
+    "bounds['Variable'] = ['x_' + str(i) for i in range(1, dim + 1)]\n",
+    "bounds['Min'] = lb*np.ones(dim)\n",
+    "bounds['Max'] = ub*np.ones(dim)\n",
+    "bounds['Scaling'] = np.ones(dim)\n",
+    "bounds = bounds.set_index('Variable')\n",
+    "bounds.to_csv(path_or_buf=bounds_file)\n"
    ]
   },
   {
@@ -361,12 +364,12 @@
    "outputs": [],
    "source": [
     "art_params = {\n",
-    "    'bounds_file': bounds_file,\n",
+    "    'bounds': utils.read_table(bounds_file),\n",
     "    'input_vars': input_vars,                       \n",
     "    'num_recommendations': user_params['n_instances_cycle1'],    \n",
     "    'initial_cycle': True,                                    # Set this to True for initial designs recommendations\n",
     "    'seed': user_params['seed'],                              \n",
-    "    'output_directory': user_params['output_directory']  \n",
+    "    'output_dir': user_params['output_dir']  \n",
     "}\n"
    ]
   },
@@ -575,7 +578,7 @@
    "outputs": [],
    "source": [
     "art_params = {\n",
-    "    'bounds_file': bounds_file,\n",
+    "    'bounds': utils.read_table(bounds_file),\n",
     "    'input_vars': input_vars,               \n",
     "    'response_vars': response_vars,\n",
     "    'objective': user_params['objective'],\n",
@@ -583,7 +586,7 @@
     "    'alpha': user_params['alpha_cycle2'],\n",
     "    'num_recommendations': user_params['num_recommendations'],  \n",
     "    'seed': user_params['seed'],                           \n",
-    "    'output_directory': user_params['output_directory']  \n",
+    "    'output_dir': user_params['output_dir']  \n",
     "}\n"
    ]
   },
@@ -700,7 +703,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "file_path = f'{art.outDir}/recommendations_FM_cycle{str(cycle)}.csv'\n",
+    "file_path = f'{art.output_dir}/recommendations_FM_cycle{str(cycle)}.csv'\n",
     "art.recommendations.to_csv(path_or_buf=file_path, sep='\\t')"
    ]
   },
@@ -792,7 +795,7 @@
    "outputs": [],
    "source": [
     "art_params = {\n",
-    "    'bounds_file': bounds_file,\n",
+    "    'bounds': utils.read_table(bounds_file),\n",
     "    'input_vars': input_vars,               \n",
     "    'response_vars': response_vars,\n",
     "    'objective': user_params['objective'],\n",
@@ -800,7 +803,7 @@
     "    'alpha': user_params['alpha_cycle3'],\n",
     "    'num_recommendations': user_params['num_recommendations'],  \n",
     "    'seed': user_params['seed'],                           \n",
-    "    'output_directory': user_params['output_directory']  \n",
+    "    'output_dir': user_params['output_dir']  \n",
     "}\n"
    ]
   },
@@ -920,7 +923,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "file_path = f'{art.outDir}/recommendations_FM_cycle{str(cycle)}.csv'\n",
+    "file_path = f'{art.output_dir}/recommendations_FM_cycle{str(cycle)}.csv'\n",
     "art.recommendations.to_csv(path_or_buf=file_path, sep='\\t')"
    ]
   },
@@ -975,7 +978,7 @@
    "outputs": [],
    "source": [
     "art_params = {\n",
-    "    'bounds_file': bounds_file,\n",
+    "    'bounds': utils.read_table(bounds_file),\n",
     "    'input_vars': input_vars,               \n",
     "    'response_vars': response_vars,\n",
     "    'objective': user_params['objective'],\n",
@@ -983,7 +986,7 @@
     "    'alpha': user_params['alpha_cycle4'],\n",
     "    'num_recommendations': user_params['num_recommendations'],  \n",
     "    'seed': user_params['seed'],                           \n",
-    "    'output_directory': user_params['output_directory']  \n",
+    "    'output_dir': user_params['output_dir']  \n",
     "}"
    ]
   },
@@ -1103,7 +1106,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "file_path = f'{art.outDir}/recommendations_FM_cycle{str(cycle)}.csv'\n",
+    "file_path = f'{art.output_dir}/recommendations_FM_cycle{str(cycle)}.csv'\n",
     "art.recommendations.to_csv(path_or_buf=file_path, sep='\\t')"
    ]
   },
