--- a/notebooks/Simulated_Data_EasyFunction_Tutorial.ipynb
+++ b/notebooks/Simulated_Data_EasyFunction_Tutorial.ipynb
@@ -46,7 +46,10 @@
    "source": [
     "import sys\n",
     "sys.path.append('../../AutomatedRecommendationTool')        # Make sure this is the location for the ART library \n",
-    "    \n",
+    "    \n\n",
+    "# Hide distracting warnings from 3rd party code\n",
+    "from warning_utils import filter_end_user_warnings\n",
+    "filter_end_user_warnings()\n\n",
     "from art.core import *   \n",
     "import matplotlib.pyplot as plt\n",
     "from mpl_toolkits.mplot3d import Axes3D\n"
@@ -188,7 +191,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "user_params['output_directory'] = '../results/'\n",
+    "user_params['output_dir'] = '../results/'\n",
     "user_params['seed'] = 42"
    ]
   },
@@ -309,13 +312,13 @@
    "source": [
     "bounds_file = '../data/sim_data_bounds_FE.csv'\n",
     "\n",
-    "df = pd.DataFrame(columns=['Variable', 'Min', 'Max', 'Scaling'])\n",
-    "df['Variable'] = ['x_' + str(i) for i in range(1, dim + 1)]\n",
-    "df['Min'] = lb*np.ones(dim)\n",
-    "df['Max'] = ub*np.ones(dim)\n",
-    "df['Scaling'] = np.ones(dim)\n",
-    "df = df.set_index('Variable')\n",
-    "df.to_csv(path_or_buf=bounds_file)\n"
+    "bounds = pd.DataFrame(columns=['Variable', 'Min', 'Max', 'Scaling'])\n",
+    "bounds['Variable'] = ['x_' + str(i) for i in range(1, dim + 1)]\n",
+    "bounds['Min'] = lb*np.ones(dim)\n",
+    "bounds['Max'] = ub*np.ones(dim)\n",
+    "bounds['Scaling'] = np.ones(dim)\n",
+    "bounds = bounds.set_index('Variable')\n",
+    "bounds.to_csv(path_or_buf=bounds_file)\n"
    ]
   },
   {
@@ -355,12 +358,12 @@
    "outputs": [],
    "source": [
     "art_params = {\n",
-    "    'bounds_file': bounds_file,\n",
+    "    'bounds': utils.read_table(bounds_file),\n",
     "    'input_vars': input_vars,                       \n",
     "    'num_recommendations': user_params['n_instances_cycle1'],    \n",
     "    'initial_cycle': True,                                    # Set this to True for initial designs recommendations\n",
     "    'seed': user_params['seed'],                              \n",
-    "    'output_directory': user_params['output_directory']  \n",
+    "    'output_dir': user_params['output_dir']  \n",
     "}\n"
    ]
   },
@@ -569,7 +572,7 @@
    "outputs": [],
    "source": [
     "art_params = {\n",
-    "    'bounds_file': bounds_file,\n",
+    "    'bounds': utils.read_table(bounds_file),\n",
     "    'input_vars': input_vars,               \n",
     "    'response_vars': response_vars,\n",
     "    'objective': user_params['objective'],\n",
@@ -577,7 +580,7 @@
     "    'alpha': user_params['alpha_cycle2'],\n",
     "    'num_recommendations': user_params['num_recommendations'],  \n",
     "    'seed': user_params['seed'],                           \n",
-    "    'output_directory': user_params['output_directory']  \n",
+    "    'output_dir': user_params['output_dir']  \n",
     "}\n"
    ]
   },
@@ -695,7 +698,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "file_path = f'{art.outDir}/recommendations_FE_cycle{str(cycle)}.csv'\n",
+    "file_path = f'{art.output_dir}/recommendations_FE_cycle{str(cycle)}.csv'\n",
     "art.recommendations.to_csv(path_or_buf=file_path, sep='\\t')"
    ]
   },
@@ -787,7 +790,7 @@
    "outputs": [],
    "source": [
     "art_params = {\n",
-    "    'bounds_file': bounds_file,\n",
+    "    'bounds': utils.read_table(bounds_file),\n",
     "    'input_vars': input_vars,               \n",
     "    'response_vars': response_vars,\n",
     "    'objective': user_params['objective'],\n",
@@ -795,7 +798,7 @@
     "    'alpha': user_params['alpha_cycle3'],\n",
     "    'num_recommendations': user_params['num_recommendations'],  \n",
     "    'seed': user_params['seed'],                           \n",
-    "    'output_directory': user_params['output_directory']  \n",
+    "    'output_dir': user_params['output_dir']  \n",
     "}\n"
    ]
   },
@@ -921,7 +924,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "file_path = f'{art.outDir}/recommendations_FE_cycle{str(cycle)}.csv'\n",
+    "file_path = f'{art.output_dir}/recommendations_FE_cycle{str(cycle)}.csv'\n",
     "art.recommendations.to_csv(path_or_buf=file_path, sep='\\t')"
    ]
   },
@@ -976,7 +979,7 @@
    "outputs": [],
    "source": [
     "art_params = {\n",
-    "    'bounds_file': bounds_file,\n",
+    "    'bounds': utils.read_table(bounds_file),\n",
     "    'input_vars': input_vars,               \n",
     "    'response_vars': response_vars,\n",
     "    'objective': user_params['objective'],\n",
@@ -984,7 +987,7 @@
     "    'alpha': user_params['alpha_cycle4'],\n",
     "    'num_recommendations': user_params['num_recommendations'],  \n",
     "    'seed': user_params['seed'],                           \n",
-    "    'output_directory': user_params['output_directory']  \n",
+    "    'output_dir': user_params['output_dir']  \n",
     "}"
    ]
   },
@@ -1128,7 +1131,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "file_path = f'{art.outDir}/recommendations_FE_cycle{str(cycle)}.csv'\n",
+    "file_path = f'{art.output_dir}/recommendations_FE_cycle{str(cycle)}.csv'\n",
     "art.recommendations.to_csv(path_or_buf=file_path, sep='\\t')"
    ]
   },
